[project]
name = "pyspark-datavault"
version = "0.1.0"
description = "A PySpark library to support development of a DataVault on basis of Spark and Delta Lake."
authors = [{name = "Michael Wellner", email = "michaelwellner@kpmg.com"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
dependencies = [
    "pydantic>=1.8.2,<2",
    "behave>=1.2.6,<2",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pyspark>=3.5.0,<3.6",
    "delta-spark>=3.1.0,<3.2",
    "pytest>=8.0.0",
    "chispa>=0.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pysparkvault"]
